<resources>
    <string name="app_name">Vlllage</string>
    <string name="whos_in">Who\'s in?</string>
    <string name="interested">Count me in</string>
    <string name="mark_party_full">Mark as full</string>
    <string name="close_party">Close party</string>
    <string name="requested">Waiting for host…</string>
    <string name="host_party">Host party</string>
    <string name="host_again">Host again</string>
    <string name="write_message">Write message</string>
    <string name="today">Today, %1$s</string>
    <string name="tomorrow">Tomorrow, %1$s</string>
    <string name="tonight">Tonight, %1$s</string>
    <string name="sentence_today">%1$s today</string>
    <string name="sentence_tomorrow">%1$s tomorrow</string>
    <string name="sentence_tonight">%1$s tonight</string>
    <string name="hidden">Hidden</string>
    <string name="by">by %1$s</string>
    <string name="enter_party_name">Enter party name</string>
    <string name="enter_time">Enter time</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_details">Enter details</string>
    <string name="social_mode">Social mode</string>
    <string name="on">On</string>
    <string name="my_profile">Me</string>
    <string name="host_a_party">Throw a party</string>
    <string name="accept_person"><![CDATA[Accept <b>%1$s</b>]]></string>
    <string name="hosted">Hosted</string>
    <string name="Following">Backing</string>
    <string name="Followers">Backers</string>
    <string name="follow_person">Back %1$s\'s adventures</string>
    <string name="me_message">Me: %1$s</string>
    <string name="time_in">in %1$s</string>
    <string name="time_ago">%1$s ago</string>
    <string name="welcome_to">Welcome to</string>
    <string name="SNAPPY">VILLAGE</string>
    <string name="enter_address">Find a location for \"%1$s\"…</string>
    <string name="parties_empty">Nothing happening nearby</string>
    <string name="messages_empty">No messages</string>
    <string name="hide">Hide</string>
    <string name="cancel">Cancel</string>
    <string name="enable_location">Turn on location</string>
    <string name="new_messages">%1$s new messages</string>
    <string name="requested_to_join_party">wants to join %1$s</string>
    <string name="party_starts_at">starts at %1$s</string>
    <string name="party_by_person">%1$s by %2$s</string>
    <string name="request_accepted">starts %1$s</string>
    <string name="started_following_you">started backing you</string>
    <string name="buy_didnt_work">That didn\'t work</string>
    <string name="buy_and_host">Buy Village</string>
    <string name="accept">Accept</string>
    <string name="about">About</string>
    <string name="messages">Messages</string>
    <plurals name="people">
        <item quantity="one">%1$s person</item>
        <item quantity="other">%1$s people</item>
    </plurals>
    <string name="parties">Parties</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signout">Sign out</string>
    <string name="signout_of">Sign out of Village?</string>
    <string name="change_photo">Change photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="add_photo">Add photo</string>
    <string name="stop_following">Stop backing</string>
    <string name="follow">Back</string>
    <string name="update_text_is_hosting"><![CDATA[is hosting <b>%1$s</b> %2$s]]></string>
    <string name="update_text_is_hosting_as_of"><![CDATA[is hosting <b>%1$s</b> as of %2$s]]></string>
    <string name="update_text_hosted"><![CDATA[hosted <b>%1$s</b> %2$s]]></string>
    <string name="update_text_is_going_to"><![CDATA[is going to <b>%1$s</b> %2$s]]></string>
    <string name="update_text_is_going_to_as_of"><![CDATA[is at <b>%1$s</b> as of %2$s]]></string>
    <string name="update_text_went_to"><![CDATA[went to <b>%1$s</b> %2$s]]></string>
    <string name="friends">Friends</string>
    <string name="here">here</string>
    <string name="what_are_you_into">What are you into?</string>
    <string name="offer_an_experience">Offer something</string>
    <string name="free">Free</string>
    <string name="price">Price</string>
    <string name="describe_the_experience">What do you offer?</string>
    <string name="add_experience">Offer</string>
    <string name="stop_offering">Stop offering</string>
    <string name="describe_another_experience">Describe another offer</string>
    <string name="information">\?</string>
    <plurals name="quests">
        <item quantity="one">%1$s side quest</item>
        <item quantity="other">%1$s side quests</item>
    </plurals>
    <string name="start_a_quest">New side quest</string>
    <string name="start_quest">Start quest</string>
    <string name="describe_the_quest">Describe the side quest</string>
    <string name="message">Message</string>
    <string name="finish">Finish</string>
    <string name="post">Post</string>
    <string name="you_started_this_quest">You already started this side quest</string>
    <string name="start_this_quest">Do you want to start this side quest?</string>
    <string name="specify_reward">Specify a reward</string>
    <string name="this_quest_is_full">This side quest is full</string>
    <string name="reward_text"><![CDATA[<b>Reward:</b> %1$s]]></string>
    <string name="details_text"><![CDATA[<b>Details:</b> %1$s]]></string>
    <string name="enter_quest_name">Enter side quest name</string>
    <string name="mark_complete">Mark complete</string>
    <string name="close_quest">Close side quest</string>
    <string name="quest_has_a_team">%1$s has a team</string>
    <string name="person_started_quest">%1$s started %2$s</string>
    <string name="you_completed_quest">You completed %1$s</string>
    <string name="you_completed_quest_with_person">You and %2$s completed %1$s</string>
    <string name="you_completed_quest_with_two_people">You completed %1$s with %2$s and %3$s</string>
    <string name="you_completed_quest_with_more_people">Your team completed %1$s</string>
    <string name="quest_completed">Side quest completed</string>
    <string name="join_quest">Join quest</string>
    <string name="quest_started">Side quest started</string>
    <string name="added_a_new_photo">added a new photo</string>
    <string name="write_something">Write something…</string>
    <string name="explore">Explore</string>
    <string name="for_amount">For %1$s</string>
    <string name="make_amount">Make %1$s</string>
    <string name="per_what">Per anything?</string>
    <string name="member_since">Member</string>
    <string name="is_here">is here</string>
    <string name="what_do_you_offer">What do you offer?</string>
    <string name="new_offer">New offer</string>
    <string name="offer_by_person">%1$s by %2$s</string>
    <string name="liked_your_photo">liked your photo</string>
    <string name="settings">Settings</string>
    <string name="halp">More information</string>
    <string name="query">What do you want?</string>
    <string name="for_price">for %1$s</string>
    <string name="person_offers">%1$s offers</string>
    <string name="person_wants">%1$s wants</string>
    <string name="nope">Nope</string>
    <string name="opening_conversation">Opening conversation…</string>
    <string name="couldnt_set_photo">Couldn\'t set photo</string>
    <string name="changing_photo">Changing photo</string>
    <string name="ask">Ask</string>
    <string name="id_like_offer">I\'d like %1$s</string>
    <string name="ive_got_offer">I\'ve got %1$s</string>
    <string name="map">Map</string>
    <string name="like">Like</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="offer_added">Offer added</string>
    <string name="offer_cancel_failed">Offer cancel failed</string>
    <string name="couldnt_add_offer">Couldn\'t add offer</string>
    <string name="social_mode_set">Social Mode %1$s</string>
    <string name="right_here">Right here</string>
    <string name="person_posted">%1$s posted</string>
    <string name="posted_an_update">posted an update</string>
    <string name="liked_your_update">liked your update</string>
    <string name="liked_that_you_offer">liked that you offer %1$s</string>
    <string name="liked_that_you_want">liked that you want %1$s</string>
    <string name="what_are_you_doing">What\'s up?</string>
    <string name="hub">Hub</string>
    <string name="contacts">Contacts</string>
    <string name="report_this_person">Report this person</string>
    <string name="report">Report</string>
    <string name="what_went_wrong">What went wrong?</string>
    <string name="thanks_for_report">Thanks! We\'ve received your report.</string>
    <string name="use_photo">Use photo</string>
    <string name="take_another_photo">Take another photo</string>
    <string name="photo_removed">Photo removed</string>
    <string name="with">with</string>
    <string name="remove">Remove</string>
    <string name="at">at</string>
    <string name="check_in">Check in</string>
    <string name="location_removed">Location removed</string>
    <string name="sent_a_photo">sent a photo</string>
    <string name="and">%1$s and %2$s</string>
    <string name="add">Add</string>
    <string name="send_feedback">Send feedback</string>
    <string name="thanks">Thanks!</string>
    <string name="write_feedback_here">Write feedback here</string>
    <string name="write_comment">Add a comment…</string>
    <string name="choose_application">Choose…</string>
    <string name="commented_on_your_update">commented on your update</string>
    <string name="welcome_to_the_village">Welcome to the VILLAGE</string>
    <string name="made_with_love">Made with love in Austin, TX</string>
    <string name="join_failed">Join failed</string>
    <string name="going_here">Going here</string>
    <string name="hide_join_failed">Hide join failed</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="do_this">Do this</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="suggest">Suggest</string>
    <string name="no_bounty">No bounty</string>
    <string name="liked_your_offer">liked your offer</string>
    <string name="suggest_me">Make suggestion</string>
    <string name="share">Share</string>
    <string name="interested_for">Hey! Count me in for %1$s</string>
    <string name="yup">Yup</string>
    <string name="message_person">Message %1$s</string>
    <string name="view_settings">View settings</string>
    <string name="hey_name">Hey %1$s!</string>
    <string name="welcome_person">Welcome %1$s!</string>
    <string name="message_not_sent">Message not sent</string>
    <string name="view_thing">View %1$s</string>
    <string name="no_description_provided">No description provided.</string>
    <string name="chat_here">Chat here…</string>
    <string name="chat_in">Chat in %1$s…</string>
    <string name="locality_chats">%1$s CHATS</string>
    <string name="chat_topic_recent">%1$s NEW</string>
    <string name="chats">CHATS</string>
    <string name="new_chat_activity">New chats</string>
    <string name="app_not_installed">App not installed</string>
    <string name="top_apps">Top Apps</string>
    <string name="all_apps">All Apps</string>
    <string name="added_to_top">Added to top</string>
    <string name="removed_from_top">%1$s removed from top</string>
    <string name="my_apps">My Apps</string>
    <string name="tap_and_hold_on_apps_to_add_them_here">Tap and hold on apps to add them here.</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="add_a_mode">Add a mode</string>
    <string name="add_mode">Turn on mode</string>
    <string name="modes">Modes</string>
    <string name="person_has_not_turned_on_any_modes_yet">%1$s has not turned on any modes yet.</string>
</resources>