<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:padding="8dp">

    <com.queatz.snappy.ui.EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        android:background="@null"
        android:hint="@string/describe_the_experience"
        android:inputType="textShortMessage|textCapSentences|textMultiLine"
        android:textColorHint="@color/whiteout"
        android:textSize="18sp" />

    <com.queatz.snappy.ui.ScrollStopper
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.queatz.snappy.ui.TimeSlider
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:textSize="18sp"
            app:textColor="@color/white" />

    </com.queatz.snappy.ui.ScrollStopper>

    <com.queatz.snappy.ui.EditText
        android:id="@+id/perWhat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        android:background="@null"
        android:hint="@string/per_what"
        android:inputType="textShortMessage|textCapWords"
        android:maxLines="1"
        android:maxLength="12"
        android:textColorHint="@color/whiteout"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button style="?android:attr/borderlessButtonStyle"
            android:id="@+id/addExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/add_experience"/>

    </LinearLayout>

</LinearLayout>