<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_md">

        <FrameLayout
            android:id="@+id/topGlass"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="4dp"
            android:layout_marginBottom="@dimen/pad_md"
            android:orientation="vertical">

            <View
                android:id="@+id/highlight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_highlight"
                android:background="@color/red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <com.queatz.snappy.ui.TextView
                    android:id="@+id/name"
                    android:textSize="@dimen/font_lg"
                    android:textColor="@color/text"
                    android:padding="@dimen/pad_md"
                    android:text="First Last"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.queatz.snappy.ui.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="@dimen/pad_lg"
                android:paddingLeft="@dimen/pad_lg"
                android:paddingBottom="@dimen/pad_md"
                android:text="@string/modes"
                android:textColor="@color/info"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/font_sm" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.queatz.snappy.ui.TextView
                    android:id="@+id/noModes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/pad_lg"
                    android:text="@string/person_has_not_turned_on_any_modes_yet"
                    android:textColor="@color/info"
                    android:textSize="@dimen/font_md" />

                <com.queatz.snappy.ui.ExpandedListView
                    android:id="@+id/modesList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="0dp" />

                <Button style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/action_add_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="@dimen/pad_lg"
                    android:text="@string/add_a_mode"
                    android:textSize="@dimen/font_md"
                    android:textColor="@color/thing_mode" />

            </LinearLayout>

            <com.queatz.snappy.ui.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="@dimen/pad_lg"
                android:paddingLeft="@dimen/pad_lg"
                android:paddingBottom="@dimen/pad_md"
                android:text="@string/about"
                android:textColor="@color/info"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/font_sm" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/followers_button"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <com.queatz.snappy.ui.TextView
                        android:id="@+id/info_followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_md"
                        android:textStyle="bold" />

                    <com.queatz.snappy.ui.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:text="@string/Followers"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/following_button"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <com.queatz.snappy.ui.TextView
                        android:id="@+id/info_following"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_md"
                        android:textStyle="bold" />

                    <com.queatz.snappy.ui.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:text="@string/Following"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hosted_button"
                    android:clickable="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <com.queatz.snappy.ui.TextView
                        android:id="@+id/info_hosted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_md"
                        android:textStyle="bold" />

                    <com.queatz.snappy.ui.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:text="@string/member_since"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <com.queatz.snappy.ui.TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:lineSpacingMultiplier="1.25"
                android:autoLink="web"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/text"
                android:textSize="@dimen/font_md" />

            <com.queatz.snappy.ui.TextView
                android:id="@+id/proximity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <Button style="@style/Widget.AppCompat.Button"
                android:id="@+id/action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/red"
                android:padding="8dp"
                android:text="@string/follow_person"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right">

                <Button style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/action_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:text="@string/message_person"
                    android:textColor="@color/red" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>