<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_rounded"
        android:orientation="vertical">

        <com.queatz.snappy.ui.EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@android:color/transparent"
            android:hint="@string/enter_party_name"
            android:inputType="textCapWords"
            android:lines="1"
            android:textColorHint="@color/gray"
            android:padding="16dp"
            android:textSize="26sp" />

        <com.queatz.snappy.ui.TimeSlider
            android:id="@+id/timeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textSize="22sp"
            app:textColor="@color/clickable" />

        <LinearLayout
            android:id="@+id/selectedLocation"
            android:visibility="gone"
            android:clickable="true"
            android:background="@drawable/softclick_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:orientation="horizontal">

            <com.makeramen.RoundedImageView
                android:id="@+id/selectedLocationProfile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                app:riv_corner_radius="32dp"
                android:src="@drawable/location" />

            <com.queatz.snappy.ui.TextView
                android:id="@+id/selectedLocationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="22sp"
                android:textColor="@color/clickable"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.queatz.snappy.ui.EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="@string/enter_location"
                android:inputType="textCapWords"
                android:imeOptions="actionSearch"
                android:lines="1"
                android:background="@android:color/transparent"
                android:textColorHint="@color/gray"
                android:padding="16dp" />

            <com.queatz.snappy.ui.ExpandedListView
                android:id="@+id/suggestedLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />

            <com.queatz.snappy.ui.EditText
                android:id="@+id/locationAddress"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/enter_address"
                android:inputType="textCapWords"
                android:lines="1"
                android:background="@android:color/transparent"
                android:textColorHint="@color/gray"
                android:imeOptions="actionSearch"
                android:padding="16dp" />

            <com.queatz.snappy.ui.ScrollStopper
                android:id="@+id/locationMapLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="256dp">

                <ImageView
                    android:id="@+id/locationMapMarker"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/rocket" />

            </com.queatz.snappy.ui.ScrollStopper>

        </LinearLayout>

        <com.queatz.snappy.ui.EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="@string/enter_details"
            android:inputType="textCapSentences|textMultiLine"
            android:background="@android:color/transparent"
            android:textColorHint="@color/gray"
            android:padding="16dp" />

        <com.queatz.snappy.ui.TextView
            android:id="@+id/action_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/host_party"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:clickable="true" />

    </LinearLayout>

</FrameLayout>